feat: m30 - add multiple assets for open range breakout
